src/webchannel/qmetaobjectpublisher.cpp
@@ -563,8 +563,10 @@ QJsonValue QMetaObjectPublisher::wrapResult(const QVariant &result, QWebChannelA
         } else if (wrappedObjects.contains(id)) {
             Q_ASSERT(object == wrappedObjects.value(id).object);
             // check if this transport is already assigned to the object
-            if (transport && !wrappedObjects.value(id).transports.contains(transport))
+            if (transport && !wrappedObjects.value(id).transports.contains(transport)) {
                 wrappedObjects[id].transports.append(transport);
+                transportedWrappedObjects.insert(transport, id);
+            }
             classInfo = wrappedObjects.value(id).classinfo;
         }
 
